refactor: Renomeia 'Destinatário' para 'Paciente' e ajusta formulário

--- a/frontend/nginx.conf
+++ b/frontend/nginx.conf
@@ -10,6 +10,13 @@ server {
         try_files $uri /index.html;
     }
 
+    # Serve static assets (public/ copied to /usr/share/nginx/html)
+    location ~* \.(png|jpg|jpeg|gif|svg|ico|css|js)$ {
+        try_files $uri =404;
+        expires 30d;
+        add_header Cache-Control "public, max-age=2592000";
+    }
+
     # Proxy API requests to the backend service inside the Docker network
     location /api/ {
         proxy_pass http://backend:4000;
