--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,20 +1,3 @@
-version: '3.8'
-
-# Docker Compose configuration for the credit system.  Three services
-# are defined:
-#
-# 1. db – A PostgreSQL 17.6 instance. According to the PostgreSQL
-#    release notes, version 17.6 was released on 14 August 2025【569261934527690†L10-L14】.  The database
-#    stores all user records.
-# 2. backend – A Node.js 22 application exposing a REST API for
-#    registration, login, password reset and retrieving the current
-#    user's profile.
-# 3. frontend – An Nginx server that serves a Vite‑built React app.
-#
-# To start all services run `docker compose up --build` from the
-# project root. Once running the application will be accessible at
-# http://localhost:3000.
-
 services:
   db:
     image: postgres:17-alpine
@@ -49,6 +32,10 @@ services:
       SMTP_PASS: ${SMTP_PASS}
       SMTP_FROM: ${SMTP_FROM}
       SMTP_SECURE: ${SMTP_SECURE}
+      ASAAS_API_TOKEN: ${ASAAS_API_TOKEN}
+      ASAAS_BASE_URL: ${ASAAS_BASE_URL}
+      ASAAS_PIX_KEY: ${ASAAS_PIX_KEY}
+      STATIC_PIX_KEY: ${STATIC_PIX_KEY}
     depends_on:
       db:
         condition: service_healthy
@@ -68,5 +55,25 @@ services:
     ports:
       - "3000:80"
 
+  pgadmin:
+    image: dpage/pgadmin4:latest
+    environment:
+      PGADMIN_DEFAULT_EMAIL: ${PGADMIN_DEFAULT_EMAIL}
+      PGADMIN_DEFAULT_PASSWORD: ${PGADMIN_DEFAULT_PASSWORD}
+    depends_on:
+      db:
+        condition: service_healthy
+    ports:
+      - "5050:80"
+    volumes:
+      - pgadmin_data:/var/lib/pgadmin
+    healthcheck:
+      test: ["CMD-SHELL", "curl -fsS http://localhost/misc/ping || exit 1"]
+      interval: 10s
+      timeout: 5s
+      retries: 5
+      start_period: 10s
+
 volumes:
   db_data:
+  pgadmin_data:
