--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,13 +9,15 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "axios": "^1.7.1",
-    "react": "^19.1.1",
-    "react-dom": "^19.1.1",
-    "react-router-dom": "^6.18.0"
+    "axios": "^1.7.2",
+    "jwt-decode": "^4.0.0",
+    "loglevel": "^1.9.1",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
+    "react-router-dom": "^6.25.1"
   },
   "devDependencies": {
     "@vitejs/plugin-react": "^4.0.0",
-    "vite": "^5.0.0"
+    "vite": "^5.4.19"
   }
 }
