chore: remover ASAAS; padronizar BR Code (desc vazia, txid '***'); corrigir QR na new-request; selecionar paciente por string; docs atualizados

--- a/backend/package.json
+++ b/backend/package.json
@@ -2,6 +2,7 @@
   "name": "credit-system-backend",
   "version": "1.0.0",
   "description": "Backend for a simple credit receiving system",
+  "type": "module",
   "main": "index.js",
   "scripts": {
     "start": "node index.js"
@@ -13,9 +14,11 @@
     "axios": "^1.6.0",
     "bcrypt": "^5.1.0",
     "cors": "^2.8.5",
+    "dotenv": "^17.2.2",
     "express": "^4.19.2",
     "jsonwebtoken": "^9.0.2",
+    "nodemailer": "^6.9.14",
     "pg": "^8.11.2",
-    "nodemailer": "^6.9.14"
+    "qrcode": "^1.5.4"
   }
 }
