feat: Finalização completa do mobile
 Mobile Dashboard:
- 3 abas: Dashboard, Pacientes, Comprar Crédito
- Cards de solicitação com status coloridos
- Botão 'Comprovante' nos cards (quando disponível)
- Layout responsivo otimizado

 Modal de Detalhes:
- Layout 2 colunas no mobile (Pagador | Recebedor)
- Tamanho 90% da tela (não sobre o menu)
- Fontes menores para caber melhor
- Grid responsivo com !important

 Upload de Comprovante:
- Interface moderna com drag & drop visual
- Botões com ícones e estados visuais
- Feedback de sucesso/erro com animações
- Design responsivo para mobile

 Gestão de Pacientes:
- Botão 'Editar' para modificar dados
- Botão 'Excluir' com confirmação
- Validação de formulário (nome/CPF)
- Layout responsivo com cards

 Estrutura de Uploads:
- Organização por data: uploads/receipts/YYYY/MM/DD/
- Nomenclatura única: receipt_{requestId}_{transactionId}.{ext}
- URLs públicas funcionais

 Design System:
- Cores personalizadas (Primária: #008033, Secundária: #ebac24, Terciária: #ff9955)
- BEM CSS com classes consistentes
- Gradientes e sombras modernas
- Animações suaves e responsivas

 Funcionalidades Técnicas:
- Sessão única com invalidação automática
- Autenticação robusta com JWT + sessionToken
- Validação client-side e server-side
- Error handling completo
- Logs estruturados

 Mobile 100% funcional e finalizado!

--- a/.gitignore
+++ b/.gitignore
@@ -5,6 +5,7 @@ TODO.md
 # Environment
 .env
 .env.*
+env-copia
 
 # Logs
 logs
@@ -36,6 +37,7 @@ coverage/
 *.pid
 *.seed
 *.tgz
+uploads/
 
 # Vite cache
 frontend/.vite/
