--- a/frontend/nginx.conf
+++ b/frontend/nginx.conf
@@ -20,6 +20,18 @@ server {
     # Proxy API requests to the backend service inside the Docker network
     location /api/ {
         proxy_pass http://backend:4000;
+        # Permitir payloads maiores (PDF base64)
+        client_max_body_size 20m;
+        proxy_http_version 1.1;
+        proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header X-Forwarded-Proto $scheme;
+    }
+
+    # Proxy para arquivos de comprovante servidos pelo backend
+    location /media/ {
+        proxy_pass http://backend:4000;
         proxy_http_version 1.1;
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
