feat: Aplicar CSS na página de primeiro acesso e otimizar cache
- Criar FirstAccess.css com design system consistente
- Implementar layout responsivo com glassmorphism
- Adicionar validação visual de CPF em tempo real
- Info box explicativa sobre necessidade do CPF
- Formulário moderno com feedback visual
- Background animado com gradientes
- Botões interativos com estados disabled/enabled
- Mensagens de status estilizadas
- Suporte completo ao tema dark/light

- Otimizar nginx.conf para desenvolvimento:
  - Remover cache agressivo de CSS/JS
  - Manter cache de imagens para performance
  - Headers no-cache para arquivos de desenvolvimento
- Criar scripts de rebuild rápido (dev-rebuild.ps1)
- Melhorar experiência de desenvolvimento sem rebuild completo

--- a/frontend/nginx.conf
+++ b/frontend/nginx.conf
@@ -11,10 +11,18 @@ server {
     }
 
     # Serve static assets (public/ copied to /usr/share/nginx/html)
-    location ~* \.(png|jpg|jpeg|gif|svg|ico|css|js)$ {
+    location ~* \.(png|jpg|jpeg|gif|svg|ico)$ {
         try_files $uri =404;
         expires 30d;
         add_header Cache-Control "public, max-age=2592000";
+    }
+    
+    # CSS and JS files - no cache for development
+    location ~* \.(css|js)$ {
+        try_files $uri =404;
+        expires -1;
+        add_header Cache-Control "no-cache, no-store, must-revalidate";
+        add_header Pragma "no-cache";
     }
 
     # Proxy API requests to the backend service inside the Docker network
