--- a/frontend/nginx.conf
+++ b/frontend/nginx.conf
@@ -8,6 +8,10 @@ server {
     # Serve SPA and fallback to index.html for client-side routes
     location / {
         try_files $uri /index.html;
+        # No cache for HTML files
+        add_header Cache-Control "no-cache, no-store, must-revalidate";
+        add_header Pragma "no-cache";
+        add_header Expires "0";
     }
 
     # Serve static assets (public/ copied to /usr/share/nginx/html)
