--- a/frontend/nginx.conf
+++ b/frontend/nginx.conf
@@ -9,9 +9,12 @@ server {
     location / {
         try_files $uri /index.html;
         # No cache for HTML files
-        add_header Cache-Control "no-cache, no-store, must-revalidate";
+        add_header Cache-Control "no-cache, no-store, must-revalidate, private";
         add_header Pragma "no-cache";
         add_header Expires "0";
+        add_header Last-Modified $date_gmt;
+        add_header ETag off;
+        if_modified_since off;
     }
 
     # Serve static assets (public/ copied to /usr/share/nginx/html)
@@ -25,8 +28,22 @@ server {
     location ~* \.(css|js)$ {
         try_files $uri =404;
         expires -1;
-        add_header Cache-Control "no-cache, no-store, must-revalidate";
+        add_header Cache-Control "no-cache, no-store, must-revalidate, private";
         add_header Pragma "no-cache";
+        add_header Expires "0";
+        add_header Last-Modified $date_gmt;
+        add_header ETag off;
+        if_modified_since off;
+    }
+
+    # Cache busting for development - force reload
+    location ~* \.(js|css)$ {
+        add_header Cache-Control "no-cache, no-store, must-revalidate, private";
+        add_header Pragma "no-cache";
+        add_header Expires "0";
+        add_header Last-Modified $date_gmt;
+        add_header ETag off;
+        if_modified_since off;
     }
 
     # Proxy API requests to the backend service inside the Docker network
